--- a/sortmet/order-success.html
+++ b/sortmet/order-success.html
@@ -178,217 +178,20 @@
 				<a href="#" class="breadcrumbs__item">Главная</a>
 				<span class="breadcrumbs__item">Корзина</span>
 			</div>
-			<div class="heading heading_with-content">
-				<h1>Корзина</h1>
-				<div class="heading__content">
-					<div class="cart-heading__print heading__print">Версия для печати</div>
-					<div class="cart-heading__share heading__share">Поделиться</div>
-					<div class="cart-heading__clear heading__clear">Очистить корзину</div>
+		
+			<div class="order-success">
+				<div class="order-success__icon">
+					<svg width="76" height="76">
+						<use xlink:href="images/dest/sprite.svg#success"></use>
+					</svg>
+					<div class="order-success__title">Ваш заказ успешно оформлен</div>
+					<div class="order-success__text">На указанный телефон поступит звонок от менеджера для подтверждения</div>
+					<div class="order-success__btn btn btn-second">Вернуться на главную</div>
 				</div>
 			</div>
-			<section class="cart">
-				<div class="cart__list">
-					<div class="cart__item">
-						<div class="cart__item-image">
-							<img src="images/dest/cart-1.webp" alt="">
-						</div>
-						<div class="cart__item-content">
-							<div class="cart__item-sku">Код товара: 329251</div>
-							<div class="cart__item-name">Трубы электросварные (ЭСВ) квадратные 80х80х4</div>
-							<div class="cart__item-services cart__item-services_desk">
-								<div class="cart__item-services-title cart-item-services-controller">Дополнительные услуги</div>
-								<form class="cart__item-services-list">
-									<label class="cart__item-services-item checkbox">
-										<input type="checkbox" class="cart__item-services-item-input checkbox__input">
-										<div class="cart__item-services-item-name checkbox__name">Резка газом</div>
-										<div class="cart__item-services-item-price">от 1 000 ₽</div>
-									</label>
-									<label class="cart__item-services-item checkbox">
-										<input type="checkbox" class="cart__item-services-item-input checkbox__input">
-										<div class="cart__item-services-item-name checkbox__name">Ленточнопильная резка</div>
-										<div class="cart__item-services-item-price">от 1 000 ₽</div>
-									</label>
-									<label class="cart__item-services-item checkbox">
-										<input type="checkbox" class="cart__item-services-item-input checkbox__input">
-										<div class="cart__item-services-item-name checkbox__name">Сварочные работы</div>
-										<div class="cart__item-services-item-price">от 1 000 ₽</div>
-									</label>
-									<div class="cart__item-services-disclamer">*точная стоимость работ согласовывается с менеджером после оформления заказа</div>
-								</form>
-							</div>
-						</div>
-						<div class="cart__item-quantity quantity-second">
-							<div class="quantity-second__minus"></div>
-							<div class="quantity-second__value">
-								<span>1000</span>
-								<span>тн</span>
-							</div>
-							<div class="quantity-second__plus"></div>
-						</div>
-						<div class="cart__item-total">49 000 ₽</div>
-						<div class="cart__item-remove"></div>
-						<div class="cart__item-services cart__item-services_mob">
-							<div class="cart__item-services-title cart-item-services-controller">Дополнительные услуги</div>
-							<form class="cart__item-services-list">
-								<label class="cart__item-services-item checkbox">
-									<input type="checkbox" class="cart__item-services-item-input checkbox__input">
-									<div class="cart__item-services-item-name checkbox__name">Резка газом</div>
-									<div class="cart__item-services-item-price">от 1 000 ₽</div>
-								</label>
-								<label class="cart__item-services-item checkbox">
-									<input type="checkbox" class="cart__item-services-item-input checkbox__input">
-									<div class="cart__item-services-item-name checkbox__name">Ленточнопильная резка</div>
-									<div class="cart__item-services-item-price">от 1 000 ₽</div>
-								</label>
-								<label class="cart__item-services-item checkbox">
-									<input type="checkbox" class="cart__item-services-item-input checkbox__input">
-									<div class="cart__item-services-item-name checkbox__name">Сварочные работы</div>
-									<div class="cart__item-services-item-price">от 1 000 ₽</div>
-								</label>
-								<div class="cart__item-services-disclamer">*точная стоимость работ согласовывается с менеджером после оформления заказа</div>
-							</form>
-						</div>
-					</div>
-					<div class="cart__item">
-						<div class="cart__item-image">
-							<img src="images/dest/cart-2.webp" alt="">
-						</div>
-						<div class="cart__item-content">
-							<div class="cart__item-sku">Код товара: 329251</div>
-							<div class="cart__item-name">Уголок стальной 20х4 мм</div>
-							
-							<div class="cart__item-services cart__item-services_desk">
-								<div class="cart__item-services-title cart-item-services-controller">Дополнительные услуги</div>
-								<form class="cart__item-services-list">
-									<label class="cart__item-services-item checkbox">
-										<input type="checkbox" class="cart__item-services-item-input checkbox__input">
-										<div class="cart__item-services-item-name checkbox__name">Резка газом</div>
-										<div class="cart__item-services-item-price">от 1 000 ₽</div>
-									</label>
-									<label class="cart__item-services-item checkbox">
-										<input type="checkbox" class="cart__item-services-item-input checkbox__input">
-										<div class="cart__item-services-item-name checkbox__name">Ленточнопильная резка</div>
-										<div class="cart__item-services-item-price">от 1 000 ₽</div>
-									</label>
-									<label class="cart__item-services-item checkbox">
-										<input type="checkbox" class="cart__item-services-item-input checkbox__input">
-										<div class="cart__item-services-item-name checkbox__name">Сварочные работы</div>
-										<div class="cart__item-services-item-price">от 1 000 ₽</div>
-									</label>
-									<div class="cart__item-services-disclamer">*точная стоимость работ согласовывается с менеджером после оформления заказа</div>
-								</form>
-							</div>
-						</div>
-						<div class="cart__item-quantity quantity-second">
-							<div class="quantity-second__minus"></div>
-							<div class="quantity-second__value">
-								<span>1000</span>
-								<span>тн</span>
-							</div>
-							<div class="quantity-second__plus"></div>
-						</div>
-						<div class="cart__item-total">49 000 ₽</div>
-						<div class="cart__item-remove"></div>
-						<div class="cart__item-services cart__item-services_mob">
-							<div class="cart__item-services-title cart-item-services-controller">Дополнительные услуги</div>
-							<form class="cart__item-services-list">
-								<label class="cart__item-services-item checkbox">
-									<input type="checkbox" class="cart__item-services-item-input checkbox__input">
-									<div class="cart__item-services-item-name checkbox__name">Резка газом</div>
-									<div class="cart__item-services-item-price">от 1 000 ₽</div>
-								</label>
-								<label class="cart__item-services-item checkbox">
-									<input type="checkbox" class="cart__item-services-item-input checkbox__input">
-									<div class="cart__item-services-item-name checkbox__name">Ленточнопильная резка</div>
-									<div class="cart__item-services-item-price">от 1 000 ₽</div>
-								</label>
-								<label class="cart__item-services-item checkbox">
-									<input type="checkbox" class="cart__item-services-item-input checkbox__input">
-									<div class="cart__item-services-item-name checkbox__name">Сварочные работы</div>
-									<div class="cart__item-services-item-price">от 1 000 ₽</div>
-								</label>
-								<div class="cart__item-services-disclamer">*точная стоимость работ согласовывается с менеджером после оформления заказа</div>
-							</form>
-						</div>
-					</div>
-					<div class="cart__item">
-						<div class="cart__item-image">
-							<img src="images/dest/cart-1.webp" alt="">
-						</div>
-						<div class="cart__item-content">
-							<div class="cart__item-sku">Код товара: 329251</div>
-							<div class="cart__item-name">Трубы электросварные (ЭСВ) квадратные 80х80х4</div>
-							<div class="cart__item-services cart__item-services_desk">
-								<div class="cart__item-services-title cart-item-services-controller">Дополнительные услуги</div>
-								<form class="cart__item-services-list">
-									<label class="cart__item-services-item checkbox">
-										<input type="checkbox" class="cart__item-services-item-input checkbox__input">
-										<div class="cart__item-services-item-name checkbox__name">Резка газом</div>
-										<div class="cart__item-services-item-price">от 1 000 ₽</div>
-									</label>
-									<label class="cart__item-services-item checkbox">
-										<input type="checkbox" class="cart__item-services-item-input checkbox__input">
-										<div class="cart__item-services-item-name checkbox__name">Ленточнопильная резка</div>
-										<div class="cart__item-services-item-price">от 1 000 ₽</div>
-									</label>
-									<label class="cart__item-services-item checkbox">
-										<input type="checkbox" class="cart__item-services-item-input checkbox__input">
-										<div class="cart__item-services-item-name checkbox__name">Сварочные работы</div>
-										<div class="cart__item-services-item-price">от 1 000 ₽</div>
-									</label>
-									<div class="cart__item-services-disclamer">*точная стоимость работ согласовывается с менеджером после оформления заказа</div>
-								</form>
-							</div>
-						</div>
-						<div class="cart__item-quantity quantity-second">
-							<div class="quantity-second__minus"></div>
-							<div class="quantity-second__value">
-								<span>1000</span>
-								<span>тн</span>
-							</div>
-							<div class="quantity-second__plus"></div>
-						</div>
-						<div class="cart__item-total">49 000 ₽</div>
-						<div class="cart__item-remove"></div>
-						<div class="cart__item-services cart__item-services_mob">
-							<div class="cart__item-services-title cart-item-services-controller">Дополнительные услуги</div>
-							<form class="cart__item-services-list">
-								<label class="cart__item-services-item checkbox">
-									<input type="checkbox" class="cart__item-services-item-input checkbox__input">
-									<div class="cart__item-services-item-name checkbox__name">Резка газом</div>
-									<div class="cart__item-services-item-price">от 1 000 ₽</div>
-								</label>
-								<label class="cart__item-services-item checkbox">
-									<input type="checkbox" class="cart__item-services-item-input checkbox__input">
-									<div class="cart__item-services-item-name checkbox__name">Ленточнопильная резка</div>
-									<div class="cart__item-services-item-price">от 1 000 ₽</div>
-								</label>
-								<label class="cart__item-services-item checkbox">
-									<input type="checkbox" class="cart__item-services-item-input checkbox__input">
-									<div class="cart__item-services-item-name checkbox__name">Сварочные работы</div>
-									<div class="cart__item-services-item-price">от 1 000 ₽</div>
-								</label>
-								<div class="cart__item-services-disclamer">*точная стоимость работ согласовывается с менеджером после оформления заказа</div>
-							</form>
-						</div>
-					</div>
-				</div>
-				<div class="cart__total">
-					<div class="cart__total-inner">
-						<div class="cart__total-count">3 товара в корзине</div>
-						<div class="cart__total-prices">
-							<div class="cart__total-price">49 000 ₽</div>
-							<div class="cart__total-discount">Скидка:  1 000 ₽</div>
-						</div>
-						<div class="cart__total-promocode">Ввести промокод</div>
-						<div class="cart__total-btn btn btn-fouth">Перейти к оформлению</div>
-						<div class="cart__total-btn btn btn-fifth">Купить в 1 клик</div>
-					</div>
-					<div class="cart__total-clear btn btn-remove"><span>Очистить корзину</span></div>
-				</div>				
-			</section>
+
 			<section class="catalog-slider">
-				<div class="title">Сопутствующие товары</div>
+				<div class="title">Хиты продаж</div>
 				<div class="catalog-slider__inner">
 					<div class="swiper" id="catalog-slider-2">
 						<div class="swiper-wrapper">
@@ -1249,51 +1052,6 @@
 					<div class="arrow arrow_prev" id="catalog-slider-2-arrow-prev"></div>
 					<div class="arrow arrow_next" id="catalog-slider-2-arrow-next"></div>
 					<div class="slider-pagination" id="catalog-slider-2-pagination"></div>
-				</div>
-			</section>
-			<section class="advantages">
-				<div class="title">С нами выгодно и удобно работать</div>
-				<div class="advantages__list">
-					<div class="advantages__item">
-						<svg class="advantages__item-icon advantages__item-icon_default" width="42" height="42">
-							<use xlink:href="images/dest/sprite.svg#delivery"></use>
-						</svg>
-						<svg class="advantages__item-icon advantages__item-icon_hover" width="42" height="42">
-							<use xlink:href="images/dest/sprite.svg#delivery-white"></use>
-						</svg>
-						<div class="advantages__item-caption">Доставка в день заказа</div>
-						<div class="advantages__item-text">Покупайте сейчас, платите потом!</div>
-					</div>
-					<div class="advantages__item">
-						<svg class="advantages__item-icon advantages__item-icon_default" width="42" height="42">
-							<use xlink:href="images/dest/sprite.svg#card"></use>
-						</svg>
-						<svg class="advantages__item-icon advantages__item-icon_hover" width="42" height="42">
-							<use xlink:href="images/dest/sprite.svg#card-white"></use>
-						</svg>
-						<div class="advantages__item-caption">Возможность оплаты на объекте</div>
-						<div class="advantages__item-text">Покупайте сейчас, платите потом!</div>
-					</div>
-					<div class="advantages__item">
-						<svg class="advantages__item-icon advantages__item-icon_default" width="42" height="42">
-							<use xlink:href="images/dest/sprite.svg#deferment"></use>
-						</svg>
-						<svg class="advantages__item-icon advantages__item-icon_hover" width="42" height="42">
-							<use xlink:href="images/dest/sprite.svg#deferment-white"></use>
-						</svg>
-						<div class="advantages__item-caption">Отсрочка платежа до 30 дней</div>
-						<div class="advantages__item-text">Покупайте сейчас, платите потом!</div>
-					</div>
-					<div class="advantages__item">
-						<svg class="advantages__item-icon advantages__item-icon_default" width="42" height="42">
-							<use xlink:href="images/dest/sprite.svg#gear"></use>
-						</svg>
-						<svg class="advantages__item-icon advantages__item-icon_hover" width="42" height="42">
-							<use xlink:href="images/dest/sprite.svg#gear-white"></use>
-						</svg>
-						<div class="advantages__item-caption">Собственное производство</div>
-						<div class="advantages__item-text">Покупайте сейчас, платите потом!</div>
-					</div>
 				</div>
 			</section>
 		</div>
