--- a/sortmet/index.html
+++ b/sortmet/index.html
@@ -187,7 +187,7 @@
 				<div class="banners__banner banner">
 					<img src="images/dest/banner-1.webp" alt="">
 					<div class="banner__content">
-						<div class="banner__caption">Доставляем металл в день заказа</div>
+						<div class="banner__caption">Поставляем металл в день заказа</div>
 						<div class="banner__text">оперативная доставка в день обращения, если заказ был осуществлен до обеда</div>
 					</div>
 				</div>
@@ -2379,7 +2379,7 @@
 										</svg>
 									</div>
 									<div class="about-us__advantages-item-content">
-										<div class="about-us__advantages-item-caption">5</div>
+										<div class="about-us__advantages-item-caption">7</div>
 										<div class="about-us__advantages-item-description">лет на рынке металлопроката</div>
 									</div>
 								</div>
