--- a/sortmet/compare.html
+++ b/sortmet/compare.html
@@ -181,7 +181,7 @@
 			<div class="heading heading_with-content">
 				<h1>Сравнение товаров</h1>
 				<div class="heading__content">
-					<div class="compare-heading__clear heading__clear heading__clear_second">Очистить корзину</div>
+					<div class="compare-heading__clear heading__clear heading__clear_second">Очистить список</div>
 				</div>
 			</div>
 			<section class="compare">
@@ -191,7 +191,7 @@
 					<div class="navigation__item" data-id="3">Труба профильная</div>
 				</div>
 				<div class="info-block compare__block compare__block_active" data-id="1">
-					<div class="compare__mobile-block-title title info-block__controller">Арматура</div>
+					<div class="compare__mobile-block-title title info-block__controller info-block__controller_active">Арматура</div>
 					<div class="info-block__mobile info-block__mobile_active">
 						<div class="swiper compare__slider" id="compare-slider-1">
 								<div class="swiper-wrapper">
@@ -2408,6 +2408,17 @@
 						</div>
 					</div>
 			</section>
+			<form action="" class="form form_blue">
+				<div class="form__block">
+					<div class="form__title">Проконсультируем по любым вопросам</div>
+					<div class="form__description">оставьте заявку и наш менеджер поможет с выбором и оформить заказ</div>
+				</div>
+				<div class="form__block">
+					<input type="text" class="form__input" placeholder="+7 999 999 99 99">
+					<button class="form__button">Отправить</button>
+					<div class="form__policy">Заполняя форму вы соглашаетесь на <a href="#">обработку персональных данных</a></div>	
+				</div>
+			</form>
 		</div>
 		<footer class="footer">
 			<div class="wrapper">
