--- a/sortmet/about.html
+++ b/sortmet/about.html
@@ -291,6 +291,85 @@
 				</div>
 			</section>
 
+			<section class="employees">
+				<div class="title">С вами работают профессионалы</div>
+				<div class="employees__main">
+					<div class="employees__main-img">
+						<img src="images/dest/employees-main.png" alt="">
+					</div>
+					<div class="employees__main-content">
+						<div class="employees__main-name">Дмитрий Целицкий</div>
+						<div class="employees__main-post">Основатель компании</div>
+						<div class="employees__main-text">Металлотрейдинговая компания СОРТМЕТ работает в режиме гипермаркета металла, осуществляя оптовые и розничные продажи 6000 наименований металлопроката и труб. Металлопродукция поставляется напрямую с ведущих комбинатов России, СНГ, Европы.</div>
+					</div>
+				</div>
+				<div class="employees__inner">
+					<div class="employees__slider swiper" id="employees-slider-1">
+						<div class="swiper-wrapper">
+							<div class="employees__slider-item swiper-slide">
+								<div class="employees__slider-item-img">
+									<img src="images/dest/employees-1.png" alt="">
+								</div>
+								<div class="employees__slider-item-name">Мария Еременко</div>
+								<div class="employees__slider-item-post">Аудитор</div>
+							</div>
+							<div class="employees__slider-item swiper-slide">
+								<div class="employees__slider-item-img">
+									<img src="images/dest/employees-2.png" alt="">
+								</div>
+								<div class="employees__slider-item-name">Дмитрий Целицкий</div>
+								<div class="employees__slider-item-post">Юрист по трудовому праву</div>
+							</div>
+							<div class="employees__slider-item swiper-slide">
+								<div class="employees__slider-item-img">
+									<img src="images/dest/employees-3.png" alt="">
+								</div>
+								<div class="employees__slider-item-name">Александр Казанцев</div>
+								<div class="employees__slider-item-post">Специалист по логистике</div>
+							</div>
+							<div class="employees__slider-item swiper-slide">
+								<div class="employees__slider-item-img">
+									<img src="images/dest/employees-4.png" alt="">
+								</div>
+								<div class="employees__slider-item-name">Пыханцев Евгений</div>
+								<div class="employees__slider-item-post">Технический консультант </div>
+							</div>
+							<div class="employees__slider-item swiper-slide">
+								<div class="employees__slider-item-img">
+									<img src="images/dest/employees-1.png" alt="">
+								</div>
+								<div class="employees__slider-item-name">Мария Еременко</div>
+								<div class="employees__slider-item-post">Аудитор</div>
+							</div>
+							<div class="employees__slider-item swiper-slide">
+								<div class="employees__slider-item-img">
+									<img src="images/dest/employees-2.png" alt="">
+								</div>
+								<div class="employees__slider-item-name">Дмитрий Целицкий</div>
+								<div class="employees__slider-item-post">Юрист по трудовому праву</div>
+							</div>
+							<div class="employees__slider-item swiper-slide">
+								<div class="employees__slider-item-img">
+									<img src="images/dest/employees-3.png" alt="">
+								</div>
+								<div class="employees__slider-item-name">Александр Казанцев</div>
+								<div class="employees__slider-item-post">Специалист по логистике</div>
+							</div>
+							<div class="employees__slider-item swiper-slide">
+								<div class="employees__slider-item-img">
+									<img src="images/dest/employees-4.png" alt="">
+								</div>
+								<div class="employees__slider-item-name">Пыханцев Евгений</div>
+								<div class="employees__slider-item-post">Технический консультант </div>
+							</div>
+						</div>
+					</div>	
+					<div class="arrow arrow_next" id="employees-slider-1-arrow-next"></div>
+					<div class="arrow arrow_prev" id="employees-slider-1-arrow-prev"></div>
+					<div class="slider-pagination" id="employees-slider-1-pagination"></div>
+				</div>
+			</section>
+
 			<section class="partners">
 				<div class="title">Наши клиенты</div>
 				<div class="partners__list swiper" id="suppilers-slider">
@@ -310,6 +389,17 @@
 						<div class="partners__item swiper-slide">
 							<img src="images/dest/supplier-5.webp" alt="">
 						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="mission">
+				<img src="images/dest/mission.png" alt="">
+				<div class="mission__content">
+					<div class="mission__title">Наша миссия и цели</div>
+					<div class="mission__text">
+						<p>Металлотрейдинговая компания СОРТМЕТ работает в режиме гипермаркета металла, осуществляя оптовые и розничные продажи 6000 наименований металлопроката и труб. Металлопродукция поставляется напрямую с ведущих комбинатов России, СНГ, Европы.</p>
+						<p>Компания СОРТМЕТ основана в начале 2016 года. Наш офис находится в г. Люберцы. Мы принимаем заказы как оптом, так и в розницу. Наш коллектив из опытных профессионалов своего дела, некоторые из них на рынке металлопроката уже больше 15 лет. Основные направления компании являются.</p>
 					</div>
 				</div>
 			</section>
@@ -422,6 +512,38 @@
 					<div class="slider-pagination" id="reviews-pagination"></div>
 				</div>
 			
+			</section>
+
+			<section class="cta">
+				<div class="cta__content">
+					<div class="title">10 000 тонн металлопроката в наличии на 2-х складах в Московской области</div>
+					<div class="cta__text">Осуществляем оптовые и розничные продажи 12 000 наименований металлопроката и труб</div>
+					<a href="#" class="cta__btn btn">Оставить заявку</a>
+				</div>
+				<div class="cta__gallery swiper" id="cta-slider">
+					<div class="swiper-wrapper">
+						<div class="cta__item swiper-slide">
+							<img src="images/dest/cta-1.png" alt="" class="cta__item">
+						</div>
+						<div class="cta__item swiper-slide">
+							<img src="images/dest/cta-2.png" alt="" class="cta__item">
+						</div>
+						<div class="cta__item swiper-slide">
+							<img src="images/dest/cta-3.png" alt="" class="cta__item">
+						</div>
+						<div class="cta__item swiper-slide">
+							<img src="images/dest/cta-4.png" alt="" class="cta__item">
+						</div>
+						<div class="cta__item swiper-slide">
+							<img src="images/dest/cta-5.png" alt="" class="cta__item">
+						</div>
+						<div class="cta__item swiper-slide">
+							<img src="images/dest/cta-6.png" alt="" class="cta__item">
+						</div>
+					</div>
+				</div>
+				<a href="#" class="cta__btn cta__btn_mob btn">Оставить заявку</a>
+
 			</section>
 
 			<section class="categories">
@@ -553,6 +675,55 @@
 						<div class="advantages__item-caption">Собственное производство</div>
 						<div class="advantages__item-text">Покупайте сейчас, платите потом!</div>
 					</div>
+				</div>
+			</section>
+
+			<section class="certificates">
+				<div class="title">Сертификаты и лицензии</div>
+				<div class="certificates__inner">
+					<div class="certificates__slider swiper" id="certificates-slider-1">
+						<div class="swiper-wrapper">
+							<div class="certificates__item swiper-slide">
+								<img src="images/dest/certificates-1.png" alt="">
+							</div>
+							<div class="certificates__item swiper-slide">
+								<img src="images/dest/certificates-2.png" alt="">
+							</div>
+							<div class="certificates__item swiper-slide">
+								<img src="images/dest/certificates-3.png" alt="">
+							</div>
+							<div class="certificates__item swiper-slide">
+								<img src="images/dest/certificates-4.png" alt="">
+							</div>
+							<div class="certificates__item swiper-slide">
+								<img src="images/dest/certificates-5.png" alt="">
+							</div>
+							<div class="certificates__item swiper-slide">
+								<img src="images/dest/certificates-6.png" alt="">
+							</div>
+							<div class="certificates__item swiper-slide">
+								<img src="images/dest/certificates-1.png" alt="">
+							</div>
+							<div class="certificates__item swiper-slide">
+								<img src="images/dest/certificates-2.png" alt="">
+							</div>
+							<div class="certificates__item swiper-slide">
+								<img src="images/dest/certificates-3.png" alt="">
+							</div>
+							<div class="certificates__item swiper-slide">
+								<img src="images/dest/certificates-4.png" alt="">
+							</div>
+							<div class="certificates__item swiper-slide">
+								<img src="images/dest/certificates-5.png" alt="">
+							</div>
+							<div class="certificates__item swiper-slide">
+								<img src="images/dest/certificates-6.png" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="arrow arrow_next" id="certificates-slider-1-arrow-next"></div>
+					<div class="arrow arrow_prev" id="certificates-slider-1-arrow-prev"></div>
+					<div class="slider-pagination" id="certificates-slider-1-pagination"></div>
 				</div>
 			</section>
 
