--- a/sortmet/about.html
+++ b/sortmet/about.html
@@ -306,61 +306,61 @@
 				<div class="employees__inner">
 					<div class="employees__slider swiper" id="employees-slider-1">
 						<div class="swiper-wrapper">
-							<div class="employees__slider-item swiper-slide">
-								<div class="employees__slider-item-img">
+							<div class="employees__slider-item employees__item swiper-slide">
+								<div class="employees__item-img">
 									<img src="images/dest/employees-1.png" alt="">
 								</div>
-								<div class="employees__slider-item-name">Мария Еременко</div>
-								<div class="employees__slider-item-post">Аудитор</div>
+								<div class="employees__item-name">Мария Еременко</div>
+								<div class="employees__item-post">Аудитор</div>
 							</div>
-							<div class="employees__slider-item swiper-slide">
-								<div class="employees__slider-item-img">
+							<div class="employees__slider-item employees__item swiper-slide">
+								<div class="employees__item-img">
 									<img src="images/dest/employees-2.png" alt="">
 								</div>
-								<div class="employees__slider-item-name">Дмитрий Целицкий</div>
-								<div class="employees__slider-item-post">Юрист по трудовому праву</div>
+								<div class="employees__item-name">Дмитрий Целицкий</div>
+								<div class="employees__item-post">Юрист по трудовому праву</div>
 							</div>
-							<div class="employees__slider-item swiper-slide">
-								<div class="employees__slider-item-img">
+							<div class="employees__slider-item employees__item swiper-slide">
+								<div class="employees__item-img">
 									<img src="images/dest/employees-3.png" alt="">
 								</div>
-								<div class="employees__slider-item-name">Александр Казанцев</div>
-								<div class="employees__slider-item-post">Специалист по логистике</div>
+								<div class="employees__item-name">Александр Казанцев</div>
+								<div class="employees__item-post">Специалист по логистике</div>
 							</div>
-							<div class="employees__slider-item swiper-slide">
-								<div class="employees__slider-item-img">
+							<div class="employees__slider-item employees__item swiper-slide">
+								<div class="employees__item-img">
 									<img src="images/dest/employees-4.png" alt="">
 								</div>
-								<div class="employees__slider-item-name">Пыханцев Евгений</div>
-								<div class="employees__slider-item-post">Технический консультант </div>
+								<div class="employees__item-name">Пыханцев Евгений</div>
+								<div class="employees__item-post">Технический консультант </div>
 							</div>
-							<div class="employees__slider-item swiper-slide">
-								<div class="employees__slider-item-img">
+							<div class="employees__slider-item employees__item swiper-slide">
+								<div class="employees__item-img">
 									<img src="images/dest/employees-1.png" alt="">
 								</div>
-								<div class="employees__slider-item-name">Мария Еременко</div>
-								<div class="employees__slider-item-post">Аудитор</div>
+								<div class="employees__item-name">Мария Еременко</div>
+								<div class="employees__item-post">Аудитор</div>
 							</div>
-							<div class="employees__slider-item swiper-slide">
-								<div class="employees__slider-item-img">
+							<div class="employees__slider-item employees__item swiper-slide">
+								<div class="employees__item-img">
 									<img src="images/dest/employees-2.png" alt="">
 								</div>
-								<div class="employees__slider-item-name">Дмитрий Целицкий</div>
-								<div class="employees__slider-item-post">Юрист по трудовому праву</div>
+								<div class="employees__item-name">Дмитрий Целицкий</div>
+								<div class="employees__item-post">Юрист по трудовому праву</div>
 							</div>
-							<div class="employees__slider-item swiper-slide">
-								<div class="employees__slider-item-img">
+							<div class="employees__slider-item employees__item swiper-slide">
+								<div class="employees__item-img">
 									<img src="images/dest/employees-3.png" alt="">
 								</div>
-								<div class="employees__slider-item-name">Александр Казанцев</div>
-								<div class="employees__slider-item-post">Специалист по логистике</div>
+								<div class="employees__item-name">Александр Казанцев</div>
+								<div class="employees__item-post">Специалист по логистике</div>
 							</div>
-							<div class="employees__slider-item swiper-slide">
-								<div class="employees__slider-item-img">
+							<div class="employees__slider-item employees__item swiper-slide">
+								<div class="employees__item-img">
 									<img src="images/dest/employees-4.png" alt="">
 								</div>
-								<div class="employees__slider-item-name">Пыханцев Евгений</div>
-								<div class="employees__slider-item-post">Технический консультант </div>
+								<div class="employees__item-name">Пыханцев Евгений</div>
+								<div class="employees__item-post">Технический консультант </div>
 							</div>
 						</div>
 					</div>	
