--- a/sortmet/index.html
+++ b/sortmet/index.html
@@ -214,14 +214,14 @@
 				</div>
 				<div class="categories__select select">
 					<div class="select__value">Сортовой прокат</div>
-						<div class="select__list">
-							<div class="select__item">Сортовой прокат</div>
-							<div class="select__item">Листовой прокат</div>
-							<div class="select__item">Трубы</div>
-							<div class="select__item">Проволока и сетка</div>
-							<div class="select__item">Нержавеющая сталь</div>
-							<div class="select__item">Цветные металлы</div>
-						</div>
+					<div class="select__list">
+						<div class="select__item">Сортовой прокат</div>
+						<div class="select__item">Листовой прокат</div>
+						<div class="select__item">Трубы</div>
+						<div class="select__item">Проволока и сетка</div>
+						<div class="select__item">Нержавеющая сталь</div>
+						<div class="select__item">Цветные металлы</div>
+					</div>
 				</div>
 				<div class="categories__list">
 					<a href="#" class="categories__item">
@@ -2186,7 +2186,7 @@
 				</section>
 				<section class="news">
 					<div class="title">Новости и статьи</div>
-					<div class="news__list swiper" id="news-slider">
+					<div class="news__slider swiper" id="news-slider">
 						<div class="swiper-wrapper">
 							<div class="news__item swiper-slide">
 								<img src="images/dest/news-1.webp" alt="">
